[package]
name = "nannou-examples"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Andre <mactuitui+github@gmail.com>"]
resolver = "2"

[dependencies]
nannou = { version="0.18", features = ["spirv"]}
nannou_audio = "0.18"
rand_xorshift = "0.3"
rustfft = "6.0"
ringbuf = "0.2"


[[example]]
name = "advance-wgpu"
path = "examples/wgpu.rs"
[[example]]
name = "fft"
path = "examples/fft.rs"

